Copy EPICS base DLLs to PREFIX bin/

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,10 @@ test:
     - bin/pvxsIoc.dll  # [win]
     - lib/pvxs.lib  # [win]
     - lib/pvxsIoc.lib  # [win]
+    # EPICS base DLLs
+    - bin/Com.dll  # [win]
+    - bin/dbCore.dll  # [win]
+    - bin/dbRecStd.dll  # [win]
     - include/pvxs/version.h
 
 about:
