Restore workaround for cfg include bug
...and adjust some configuration file paths accordingly.

The original workaround was removed in upstream in
b0b8d60656e98fe0ec62aa91e71c067efc0dd6e2. Since the EPICS base bug that
it was working around seems to be still alive, at least in the
conda-forge configuration, the workaround is restored with changed
location of several files taken into account.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ source:
   sha256: 10d11809ad1e9049d0b85260b1e417570f07c2d468494064dcf0abeac090ed16
   patches:
     - 0001-Add-environment-variable-for-softIocPVX.dbd.patch
+    - 0002-Workaround-cfg-include-bug.patch
 
 build:
   number: 0
