--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - 0002-Workaround-cfg-include-bug.patch
 
 build:
-  number: 1
+  number: 2
   run_exports:
     - {{ pin_subpackage('pvxs', max_pin='x.x.x') }}
 
@@ -68,3 +68,4 @@ extra:
     - anderslindho
     - lucmaga
     - aharrisson
+    - simonrose
