Add stdlib(c) as build dep also for osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ stdlib('c') }}  # [linux]
+    - {{ stdlib('c') }}  # [unix]
     - {{ compiler('cxx') }}
     - make
     - perl
