MNT: try adding wheel

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -85,6 +85,7 @@ outputs:
         - python
         - pip
         - setuptools
+        - wheel
         - setuptools_dso
         - epicscorelibs
         - ${{ pin_subpackage('pvxs', exact=True) }}
