MNT: pin setuptools back to avoid warning

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -84,7 +84,7 @@ outputs:
       host:
         - python
         - pip
-        - setuptools
+        - setuptools <81
         - wheel
         - setuptools_dso
         - epicscorelibs
